--- a/app/views/recommends/_body_show.html.erb
+++ b/app/views/recommends/_body_show.html.erb
@@ -49,12 +49,12 @@
     <div class="btn clearfix">
       <em>$<%= @recommend.sub_price_01 %></em><a target="_blank" href="<%= @recommend.sub_link_01 %>">Buy Now</a>
     </div>
-    <em class="note">
-      * Price may be changed after the post published date.<br/>
+    <ul class="note">
+      <li>Price may be changed after the post published date.</li>
       <% if @recommend.rec_spare_01.present? %>
-        * Ratings and Reviews may be changed after the post published date.
+        <li> Ratings and Reviews may be changed after the post published date.</li>
       <% end %>
-    </em>
+    </ul>
     <% if @recommend.sub_intro_01.present? %>
       <!-- <div class="trix trix-container gradient recommend_trix"> -->
         <h4>About This</h4>
@@ -103,7 +103,7 @@
           <em>Avg. <%= @recommend.rec_spare_02 %> / 5.0</em>
         </div>
         <div class="box">
-          <p>Reviews</p>
+          <p>Customer Ratings</p>
           <em><%= number_with_delimiter(@recommend.rec_spare_12) %>+</em>
         </div>  
       </div>
@@ -112,12 +112,12 @@
     <div class="btn clearfix">
       <em>$<%= @recommend.sub_price_02 %></em><a target="_blank" href="<%= @recommend.sub_link_02 %>">Buy Now</a>
     </div>
-    <em class="note">
-      * Price may be changed after the post published date.<br/>
+    <ul class="note">
+      <li>Price may be changed after the post published date.</li>
       <% if @recommend.rec_spare_02.present? %>
-        * Ratings and Reviews may be changed after the post published date.
+        <li> Ratings and Reviews may be changed after the post published date.</li>
       <% end %>
-    </em>
+    </ul>
     <% if @recommend.sub_intro_02.present? %>
       <!-- <div class="trix trix-container gradient recommend_trix"> -->
         <h4>About This</h4>
@@ -166,7 +166,7 @@
           <em>Avg. <%= @recommend.rec_spare_03 %> / 5.0</em>
         </div>
         <div class="box">
-          <p>Reviews</p>
+          <p>Customer Ratings</p>
           <em><%= number_with_delimiter(@recommend.rec_spare_13) %>+</em>
         </div>  
       </div>
@@ -175,12 +175,12 @@
     <div class="btn clearfix">
       <em>$<%= @recommend.sub_price_03 %></em><a target="_blank" href="<%= @recommend.sub_link_03 %>">Buy Now</a>
     </div>
-    <em class="note">
-      * Price may be changed after the post published date.<br/>
+    <ul class="note">
+      <li>Price may be changed after the post published date.</li>
       <% if @recommend.rec_spare_03.present? %>
-        * Ratings and Reviews may be changed after the post published date.
+        <li> Ratings and Reviews may be changed after the post published date.</li>
       <% end %>
-    </em>
+    </ul>
     <% if @recommend.sub_intro_03.present? %>
       <!-- <div class="trix trix-container gradient recommend_trix"> -->
         <h4>About This</h4>
@@ -229,7 +229,7 @@
           <em>Avg. <%= @recommend.rec_spare_04 %> / 5.0</em>
         </div>
         <div class="box">
-          <p>Reviews</p>
+          <p>Customer Ratings</p>
           <em><%= number_with_delimiter(@recommend.rec_spare_14) %>+</em>
         </div>  
       </div>
@@ -238,12 +238,12 @@
     <div class="btn clearfix">
       <em>$<%= @recommend.sub_price_04 %></em><a target="_blank" href="<%= @recommend.sub_link_04 %>">Buy Now</a>
     </div>
-    <em class="note">
-      * Price may be changed after the post published date.<br/>
+    <ul class="note">
+      <li>Price may be changed after the post published date.</li>
       <% if @recommend.rec_spare_04.present? %>
-        * Ratings and Reviews may be changed after the post published date.
+        <li> Ratings and Reviews may be changed after the post published date.</li>
       <% end %>
-    </em>
+    </ul>
     <% if @recommend.sub_intro_04.present? %>
       <!-- <div class="trix trix-container gradient recommend_trix"> -->
         <h4>About This</h4>
@@ -292,7 +292,7 @@
           <em>Avg. <%= @recommend.rec_spare_05 %> / 5.0</em>
         </div>
         <div class="box">
-          <p>Reviews</p>
+          <p>Customer Ratings</p>
           <em><%= number_with_delimiter(@recommend.rec_spare_15) %>+</em>
         </div>  
       </div>
@@ -301,12 +301,12 @@
     <div class="btn clearfix">
       <em>$<%= @recommend.sub_price_05 %></em><a target="_blank" href="<%= @recommend.sub_link_05 %>">Buy Now</a>
     </div>
-    <em class="note">
-      * Price may be changed after the post published date.<br/>
+    <ul class="note">
+      <li>Price may be changed after the post published date.</li>
       <% if @recommend.rec_spare_05.present? %>
-        * Ratings and Reviews may be changed after the post published date.
+        <li> Ratings and Reviews may be changed after the post published date.</li>
       <% end %>
-    </em>
+    </ul>
     <% if @recommend.sub_intro_05.present? %>
       <!-- <div class="trix trix-container gradient recommend_trix"> -->
         <h4>About This</h4>
@@ -356,7 +356,7 @@
             <em>Avg. <%= @recommend.rec_spare_06 %> / 5.0</em>
           </div>
           <div class="box">
-            <p>Reviews</p>
+            <p>Customer Ratings</p>
             <em><%= number_with_delimiter(@recommend.rec_spare_16) %>+</em>
           </div>  
         </div>
@@ -365,12 +365,12 @@
       <div class="btn clearfix">
         <em>$<%= @recommend.sub_price_06 %></em><a target="_blank" href="<%= @recommend.sub_link_06 %>">Buy Now</a>
       </div>
-      <em class="note">
-        * Price may be changed after the post published date.<br/>
-        <% if @recommend.rec_spare_06.present? %>
-          * Ratings and Reviews may be changed after the post published date.
-        <% end %>
-      </em>
+      <ul class="note">
+      <li>Price may be changed after the post published date.</li>
+      <% if @recommend.rec_spare_06.present? %>
+        <li> Ratings and Reviews may be changed after the post published date.</li>
+      <% end %>
+    </ul>
       <% if @recommend.sub_intro_06.present? %>
         <!-- <div class="trix trix-container gradient recommend_trix"> -->
           <h4>About This</h4>
@@ -421,7 +421,7 @@
             <em>Avg. <%= @recommend.rec_spare_07 %> / 5.0</em>
           </div>
           <div class="box">
-            <p>Reviews</p>
+            <p>Customer Ratings</p>
             <em><%= number_with_delimiter(@recommend.rec_spare_17) %>+</em>
           </div>  
         </div>
@@ -430,12 +430,12 @@
       <div class="btn clearfix">
       <em>$<%= @recommend.sub_price_07 %></em><a target="_blank" href="<%= @recommend.sub_link_07 %>">Buy Now</a>
       </div>
-      <em class="note">
-        * Price may be changed after the post published date.<br/>
-        <% if @recommend.rec_spare_07.present? %>
-          * Ratings and Reviews may be changed after the post published date.
-        <% end %>
-      </em>
+      <ul class="note">
+      <li>Price may be changed after the post published date.</li>
+      <% if @recommend.rec_spare_07.present? %>
+        <li> Ratings and Reviews may be changed after the post published date.</li>
+      <% end %>
+    </ul>
       <% if @recommend.sub_intro_07.present? %>
         <!-- <div class="trix trix-container gradient recommend_trix"> -->
           <h4>About This</h4>
@@ -486,7 +486,7 @@
             <em>Avg. <%= @recommend.rec_spare_08 %> / 5.0</em>
           </div>
           <div class="box">
-            <p>Reviews</p>
+            <p>Customer Ratings</p>
             <em><%= number_with_delimiter(@recommend.rec_spare_18) %>+</em>
           </div>  
         </div>
@@ -495,12 +495,12 @@
       <div class="btn clearfix">
         <em>$<%= @recommend.sub_price_08 %></em><a target="_blank" href="<%= @recommend.sub_link_08 %>">Buy Now</a>
       </div>
-      <em class="note">
-        * Price may be changed after the post published date.<br/>
-        <% if @recommend.rec_spare_08.present? %>
-          * Ratings and Reviews may be changed after the post published date.
-        <% end %>
-      </em>
+      <ul class="note">
+      <li>Price may be changed after the post published date.</li>
+      <% if @recommend.rec_spare_08.present? %>
+        <li> Ratings and Reviews may be changed after the post published date.</li>
+      <% end %>
+    </ul>
       <% if @recommend.sub_intro_08.present? %>
         <!-- <div class="trix trix-container gradient recommend_trix"> -->
           <h4>About This</h4>
@@ -551,7 +551,7 @@
             <em>Avg. <%= @recommend.rec_spare_09 %> / 5.0</em>
           </div>
           <div class="box">
-            <p>Reviews</p>
+            <p>Customer Ratings</p>
             <em><%= number_with_delimiter(@recommend.rec_spare_19) %>+</em>
           </div>  
         </div>
@@ -560,12 +560,12 @@
       <div class="btn clearfix">
        <em>$<%= @recommend.sub_price_09 %></em><a target="_blank" href="<%= @recommend.sub_link_09 %>">Buy Now</a>
       </div>
-      <em class="note">
-        * Price may be changed after the post published date.<br/>
-        <% if @recommend.rec_spare_09.present? %>
-          * Ratings and Reviews may be changed after the post published date.
-        <% end %>
-      </em>
+      <ul class="note">
+      <li>Price may be changed after the post published date.</li>
+      <% if @recommend.rec_spare_09.present? %>
+        <li> Ratings and Reviews may be changed after the post published date.</li>
+      <% end %>
+    </ul>
       <% if @recommend.sub_intro_09.present? %>
         <!-- <div class="trix trix-container gradient recommend_trix"> -->
           <h4>About This</h4>
@@ -616,7 +616,7 @@
             <em>Avg. <%= @recommend.rec_spare_10 %> / 5.0</em>
           </div>
           <div class="box">
-            <p>Reviews</p>
+            <p>Customer Ratings</p>
             <em><%= number_with_delimiter(@recommend.rec_spare_20) %>+</em>
           </div>  
         </div>
@@ -625,12 +625,12 @@
       <div class="btn clearfix">
         <em>$<%= @recommend.sub_price_10 %></em><a target="_blank" href="<%= @recommend.sub_link_10 %>">Buy Now</a>
       </div>
-      <em class="note">
-        * Price may be changed after the post published date.<br/>
-        <% if @recommend.rec_spare_10.present? %>
-          * Ratings and Reviews may be changed after the post published date.
-        <% end %>
-      </em>
+      <ul class="note">
+      <li>Price may be changed after the post published date.</li>
+      <% if @recommend.rec_spare_10.present? %>
+        <li> Ratings and Reviews may be changed after the post published date.</li>
+      <% end %>
+    </ul>
       <% if @recommend.sub_intro_10.present? %>
         <!-- <div class="trix trix-container gradient recommend_trix"> -->
           <h4>About This</h4>
