--- a/app/assets/stylesheets/featured.css
+++ b/app/assets/stylesheets/featured.css
@@ -128,7 +128,8 @@
 .cu_wrap .inner>span{display:inline-block;border-bottom:1px solid #ccc;}
 .cu_wrap .inner>p{border-bottom:1px solid #ccc;margin-top:20px;}
 .cu_wrap .inner>h4{margin:10px 0 -20px 0;}
-.cu_wrap .inner>em.note{margin-top:-20px;font-size:12px;border:1px dashed #ccc;border-left:0;border-right:0;padding:2px 0;}
+.cu_wrap .inner>ul.note{margin:10px 0 0 0;font-size:12px;border:1px dashed #ccc;border-left:0;border-right:0;padding:2px 0;display:block;}
+.cu_wrap .inner>ul>li{list-style:disc;margin-left:16px;}
 .cu_wrap .inner .btn{margin-top:20px;/*display:inline-block;*/}
 .cu_wrap .inner .btn>em{float:left;font-size:20px;background:#000;color:#fff;padding:3px 20px;border:1px solid #000;line-height:30px;}
 .cu_wrap .inner .btn>a{float:left;text-decoration:none;color:#000;font-size:20px;border:1px solid #000;padding:3px 20px;line-height:30px;}
@@ -155,11 +156,11 @@
   .cu_wrap .detitle h2{font-size:20px;}
   .cu_wrap .detitle p{width:100%;}
   .cu_wrap .detitle .tit_int{padding:25px;}
-  .cu_wrap .cu_box{margin:0;padding-bottom:30px;}
+  .cu_wrap .cu_box{margin:30px 0 0 0;padding-bottom:30px;}
   .cu_wrap .pic{float:none;width:100%;margin-right:0;}
   .cu_wrap .pic>a>img{width:100%;}
   .cu_wrap .inner{float:none;width:100%;margin-top:10px;}
-  .cu_wrap .inner>strong{font-size:17px;}
+  .cu_wrap .inner>strong{font-size:17px;margin-top:30px;}
   .cu_wrap .inner>strong>span{display:inline-block;}
   /*.cu_wrap .inner>span{margin:10px 0;}*/
   .cu_wrap .inner>p{padding-bottom:10px;margin-bottom:0;border:none;}
