--- a/app/views/deals/_body_most_rev_ver2.html.erb
+++ b/app/views/deals/_body_most_rev_ver2.html.erb
@@ -1,4 +1,5 @@
 <!-- <div class="filter-node" data-filter='["","Title"]'><a target="_blank" href="products_Link" class="overlay-container" data-overlay-text="Title">Title</a></div> -->
+<h2>Most-Rated</h2>
 <div class="most_article">
   
     <div class="boxes">
