--- a/app/assets/stylesheets/featured.css
+++ b/app/assets/stylesheets/featured.css
@@ -87,6 +87,7 @@
 	
   .featured .filter-group{column-count:1;column-gap:0;}
 	.featured .filter-group .filter-node .inner a h3{font-size:15px;line-height:1.4;height:auto;overflow:visible;}
+
 }
 
 @media screen and (min-width:641px) and (max-width:1199px){
@@ -99,6 +100,7 @@
   .featured .filter-group .filter-node .inner h3{font-size:15px;}
 	.featured .filter-group .filter-node .inner em{font-size:10px;}
 	.featured .filter-group .filter-node .inner a h3{font-size:15px;}
+  .most_rated{margin-top:30px;}
 }
 /* End Featured Main Page */
 
@@ -458,6 +460,7 @@
 .promotions .promotion_box .btn a{text-decoration:none;color:#616161;font-size:15px;}
 .promotions .admin{margin-top:10px;}
 .promotions .admin a{text-decoration:none;color:#616161;}
+.promotions .most_article .boxes{margin-bottom:20px;}
 .filter-node.filter-me {opacity:0 !important; visibility:hidden; position:absolute; top: 2000px;}
 /* new editor's pick tem */
 .pick_box{float:left;width:31.3333%;margin:0 1% 2% 1%;}
@@ -474,7 +477,9 @@
   .promotions .guide_controll em{display:none;}
   .promotions .featured .sm_pc .popup_menu button{display:none;}
   .promotions .guide_controll{padding-left:20px;}
-  .promotions .most_rev, .promotions .amzpromo{padding-left:0;margin-top:100px;}
+  .promotions .amzpromo{padding-left:0;margin-top:100px;}
+  .promotions .most_rev{margin-top:30px;padding:0;}
+  .promotions .featured .sm_pc .most_rev button{line-height:15px;font-size:15px;padding:0;}
   .promotions .pop_menu{background:#fff;}
   .promotions .pop_menu .btn{color:#fff;text-shadow:-1.5px 0 #000, 0 1.5px #000, 1.5px 0 #000, 0 -1.5px #000;}
   .promotions .guide_controll .btn{margin:0;letter-spacing:0;}
