--- a/app/views/deals/_navbar_most_index.html.erb
+++ b/app/views/deals/_navbar_most_index.html.erb
@@ -1,19 +1,20 @@
-<div class="featured editors most_reviewe_wrap">
+<div class="most_rated">
+  <div class="featured editors most_reviewe_wrap">
 
-  <div class="sm_pc most_pc">
-   <div class="filter-search guide_controll amzpromo most_rev">
-    <button class="filter-button btn btn-md white-text rev_index" data-filter="tech"></button>
+    <div class="sm_pc most_pc">
+     <div class="filter-search guide_controll most_rev">
+      <button class="filter-button btn btn-md white-text rev_index" data-filter="tech"></button>
 
-   <!--    <button class="filter-button btn btn-md btn-primary rev_index" data-filter="*">All</button>
-      <button class="filter-button btn btn-md white-text rev_index" data-filter="tech">Tech & Electronics</button>
-      <button class="filter-button btn btn-md rev_index" data-filter="home">Home & Kitchen</button>
-      <button class="filter-button btn btn-md rev_index" data-filter="outdoor">Outdoor & Sports</button>
-      <button class="filter-button btn btn-md rev_index" data-filter="beauty">Beauty & Fashion</button>
-      <button class="filter-button btn btn-md rev_index others" data-filter="others">Others</button>
- -->
-      <input type="text" class="form-control" placeholder="Search here..."> <em>MOST-REVIEWED PRODUCTS ON AMAZON</em>
+     <!--    <button class="filter-button btn btn-md btn-primary rev_index" data-filter="*">All</button>
+        <button class="filter-button btn btn-md white-text rev_index" data-filter="tech">Tech & Electronics</button>
+        <button class="filter-button btn btn-md rev_index" data-filter="home">Home & Kitchen</button>
+        <button class="filter-button btn btn-md rev_index" data-filter="outdoor">Outdoor & Sports</button>
+        <button class="filter-button btn btn-md rev_index" data-filter="beauty">Beauty & Fashion</button>
+        <button class="filter-button btn btn-md rev_index others" data-filter="others">Others</button>
+   -->
+        <input type="text" class="form-control" placeholder="Search here..."> <em>MOST-RATED PRODUCTS ON AMAZON</em>
+      </div>
     </div>
-  </div>
 
-</div><!--./featured-->
-
+  </div><!--./featured-->
+</div>
