--- a/app/assets/stylesheets/deals.css.erb
+++ b/app/assets/stylesheets/deals.css.erb
@@ -643,6 +643,7 @@ nav.most_m_popup ul li{padding:6px 10px 3px 10px;border-bottom:1px solid #ccc;}
 .deal_category_wrap ul li a{text-decoration:none;color:#000;font-size:28px;text-shadow: -2px 0 #fff, 0 2px #fff, 2px 0 #fff, 0 -2px #fff;}
 
 .category_mobile{margin:80px 0 0 0;}
+.category_mobile img{border-radius:10px;}
 
 @media screen and (max-width:640px){
   .deal_category_wrap .wrap{margin:0;}
