--- a/app/views/deals/_header_store.html.erb
+++ b/app/views/deals/_header_store.html.erb
@@ -22,7 +22,7 @@
         <li><a href="/deals/bestdeals">TODAY'S DEALS,</a></li>
         <!-- <li><a href="/hotdeals"> - MORE DEALS,</a></li> -->
         <li><a href="/deals/promo_codes">COUPON CODES,</a></li>
-        <li><a target="_blank" href="/deals/promo_codes">DEAL OF THE DAY</a></li>
+        <li><a target="_blank" href="https://amzn.to/2Q8uWyX">DEAL OF THE DAY</a></li>
         <li><a target="_blank" href="https://amzn.to/2IsIyRw">LIGHTNING DEALS</a></li>
         <!-- <li><a href="/promocodes"> - MORE CODES,</a></li> -->
         <!-- <li><a href="/deals/most_reviewed">MOST-REVIEWED,</a></li> -->
@@ -30,7 +30,7 @@
         <!--<li><a href="deals-v2-onsale.html">On Sale</a></li>-->
         <!-- <li><a href="/deals/promotions">SALES OFFER & PROMOTIONS,</a></li> -->
         <li class="top_menu"><a href="/deals/stores">FEATURED DISCOUNTS</a></li>
-        <li><a href="/storepromotions">DEALS & PROMOTIONS,</a></li>
+        <li><a href="/storepromotions">DEALS & PROMOTIONS</a></li>
         <!-- <li><a href="/storedeals">THE BEST DEALS</a></li> -->
       </ul>
       <button class="gnb_close"><img src="<%=asset_path 'close_white.png' %>" alt="close menu" /></button>
