--- a/app/views/deals/bestdeals.html.erb
+++ b/app/views/deals/bestdeals.html.erb
@@ -8,7 +8,7 @@
   <div class="codes common_layout">
 
       <div class="lt_cnt note_pc">
-        <h2>Best Deals of Amazon</h2>
+        <h2>Today's Discovery</h2>
         <%= render 'deals/notes_bestdeals' %>
       </div><!--./lt_cnt-->
       
