--- a/app/views/deals/promo_codes.html.erb
+++ b/app/views/deals/promo_codes.html.erb
@@ -9,7 +9,7 @@
 
     <div class="codes common_layout">
       <div class="lt_cnt note_pc">
-       <h2>Coupons on Amazon</h2>
+       <h2>Coupon Codes</h2>
        <%= render 'deals/notes_promo_test' %>
       </div><!--./lt_cnt-->
       
