--- a/app/views/deals/_header_index.html.erb
+++ b/app/views/deals/_header_index.html.erb
@@ -5,7 +5,7 @@
       <ul class="clearfix">
         <li class="coumos1"><a class="active" href="/deals/quick_search">Amazon Deal Finder</a></li>
         <!-- <li><a href="/hotdeals">More Deals & Coupons</a></li> -->
-        <li><a href="/deals/bestdeals">Today's Deals</a></li>
+        <li><a href="/deals/bestdeals">Today's Discovery</a></li>
         <!-- <li class="more"><a href="/hotdeals">[ More Deals ]</a></li> -->
         <li><a href="/deals/promo_codes">Coupon Codes</a></li>
         <li class="todays_deal"><a target="_blank" href="https://amzn.to/2Q8uWyX">Deal of the Day</a></li>
@@ -26,7 +26,7 @@
         <li class="top_menu"><a href="/deals/quick_search">ALL ABOUT AMAZON</a></li>
         <li><a href="/deals/quick_search">AMAZON DEAL FINDER,</a></li>
         <!-- <li><a href="/hotdeals">MORE DEALS & COUPONS</a></li> -->
-        <li><a href="/deals/bestdeals">TODAY'S DEALS,</a></li>
+        <li><a href="/deals/quick_search">AMAZON DEAL FINDER,</a></li>
         <!-- <li><a href="/hotdeals"> - MORE DEALS,</a></li> -->
         <li><a href="/deals/promo_codes">COUPON CODES,</a></li>
         <li><a target="_blank" href="https://amzn.to/2Q8uWyX">DEAL OF THE DAY,</a></li>
