--- a/app/assets/stylesheets/deals.css.erb
+++ b/app/assets/stylesheets/deals.css.erb
@@ -787,8 +787,9 @@ nav.most_m_popup ul li{padding:6px 10px 3px 10px;border-bottom:1px solid #ccc;}
 
 
 @media screen and (max-width:640px){
-  .insta_wrap .card{float:none;width:100%;margin:20px 0 40px 0;}
+  .insta_wrap .card{float:none;width:100%;margin:20px 0 40px 0;height:382.5px;}
   .marketing_menu ul li{float:left;margin-left:5px;}
+  .insta_wrap .img{height:200px;}
 }
 @media screen and (min-width:641px) and (max-width:1199px){
   .insta_wrap .card{width:47%;} 
