--- a/app/views/deals/_body_hotdeals.html.erb
+++ b/app/views/deals/_body_hotdeals.html.erb
@@ -150,7 +150,7 @@
      <!-- <em>*Pricing may change and deals can expire fast.</em> -->
     </div><!--/.code_high-->
   </div><!--/.inner --> 
-  <div class="deal_btn"><a target="_blank" href="<%= hotdeal.h_link %>">Shop Now at Amazon</a></div>
+  <div class="deal_btn"><a target="_blank" href="<%= hotdeal.h_link %>">Shop Now on Amazon</a></div>
  </div>
 
  <% if hotdeal.h_spare_03.present? %>
