--- a/app/views/deals/_header_store.html.erb
+++ b/app/views/deals/_header_store.html.erb
@@ -33,6 +33,7 @@
         <!-- <li><a href="/deals/promotions">SALES OFFER & PROMOTIONS,</a></li> -->
         <li class="top_menu"><a href="/deals/stores">FEATURED DISCOUNTS</a></li>
         <li><a href="/storepromotions">TODAY'S DISCOVERY</a></li>
+        <li><a href="/deals/store_sales">SALE & CLEARANCE</a></li>
         <!-- <li><a href="/storedeals">THE BEST DEALS</a></li> -->
       </ul>
       <button class="gnb_close"><img src="<%=asset_path 'close_white.png' %>" alt="close menu" /></button>
