--- a/app/views/deals/_navbar_deals.html.erb
+++ b/app/views/deals/_navbar_deals.html.erb
@@ -8,12 +8,12 @@
         <li>
           <a href="/deals/bestdeals">Today's Discovery</a>
           <ul class="down_sub clearfix">
-            <li><a href="/deals/bestdeals">Deals</a></li>
+            <li><a class="active" href="/deals/bestdeals">Deals</a></li>
             <li><a href="/deals/promo_codes">Codes</a></li>
           </ul>
         </li>
         <!-- <li class="more"><a href="/hotdeals">[ More Deals ]</a></li> -->
-        <li><a href="/deals/promo_codes">Coupon Codes</a></li>
+        <!-- <li><a href="/deals/promo_codes">Coupon Codes</a></li> -->
         <li class="todays_deal"><a target="_blank" href="https://amzn.to/2Q8uWyX">Deal of the Day</a></li>
         <li class="todays_deal"><a target="_blank" href="https://amzn.to/2IsIyRw">Lightning Deals</a></li>
         <!-- <li class="more"><a href="/promocodes">[ More Codes ]</a></li> -->
