--- a/app/views/deals/bestdeals.html.erb
+++ b/app/views/deals/bestdeals.html.erb
@@ -4,7 +4,7 @@
   <div class="wrap">  
   <%= render 'shared/header_short' %>
   <%= render 'shared/header_amazon' %>
-  <%= render 'deals/header' %>    
+  <%= render 'deals/navbar_deals' %>    
   <div class="codes common_layout">
 
       <div class="lt_cnt note_pc">
