--- a/app/views/deals/promo_codes.html.erb
+++ b/app/views/deals/promo_codes.html.erb
@@ -5,7 +5,7 @@
 
     <%= render 'shared/header_short' %>
     <%= render 'shared/header_amazon' %>
-    <%= render 'deals/header' %>    
+    <%= render 'deals/navbar_codes' %>    
 
     <div class="codes common_layout">
       <div class="lt_cnt note_pc">
