--- a/app/assets/stylesheets/common.css
+++ b/app/assets/stylesheets/common.css
@@ -289,10 +289,14 @@ header .gnb_m,header .gnb_open2{display:none;}
 .sub_nav .shoes_nav_pc>ul{background:#000;padding:5px 0;}
 .sub_nav .shoes_nav_pc>ul>li{width:auto;margin:0 2%;}
 .sub_nav .sub_nav_pc>ul>li>a{text-decoration:none;color:#000;font-size:20px;display:block;font-weight:400;}
-.sub_nav .sub_nav_pc>ul>li>a.active{color:#000;font-weight:bold;border-bottom:2px solid #000;display:inline;background:#ffff00;padding:2px 10px;}
+.sub_nav .sub_nav_pc>ul>li>a.active{color:#000;font-weight:bold;border:2px solid #000;display:inline;background:#ffff00;padding:2px 10px;}
 .sub_nav .sub_nav_pc>ul>li.todays_deal>a.active{background:#fff;border:none;}
 .sub_nav .sub_nav_pc>ul>li.new_code>a{background:#87c442;color:#fff;padding:2px 10px;}
 .sub_nav .sub_nav_pc>ul>li.new_deal>a{background:#08f;color:#fff;padding:2px 10px;}
+.sub_nav .sub_nav_pc>ul>li>ul.down_sub{margin-top:5px;}
+.sub_nav .sub_nav_pc>ul>li>ul.down_sub li{float:left;width:50%;text-align:center;border:1px solid;}
+.sub_nav .sub_nav_pc>ul>li>ul.down_sub li a{color:#000;display:block;}
+.sub_nav .sub_nav_pc>ul>li>ul.down_sub li a.active{background:#ffff00;}
 .sub_nav .gnb_open,
 .sub_nav .gnb_open_b,
 .sub_nav .gnb_m,
