--- a/app/views/deals/_navbar_codes.html.erb
+++ b/app/views/deals/_navbar_codes.html.erb
@@ -6,14 +6,14 @@
         <li class="coumos1"><a href="/deals/quick_search">Amazon Deal Finder</a></li>
         <!-- <li><a href="/hotdeals">More Deals & Coupons</a></li> -->
         <li>
-          <a href="/deals/bestdeals">Today's Discovery</a>
+          <a class="active" href="/deals/bestdeals">Today's Discovery</a>
           <ul class="down_sub clearfix">
             <li><a href="/deals/bestdeals">Deals</a></li>
-            <li><a href="/deals/promo_codes">Codes</a></li>
+            <li><a class="active" href="/deals/promo_codes">Codes</a></li>
           </ul>
         </li>
         <!-- <li class="more"><a href="/hotdeals">[ More Deals ]</a></li> -->
-        <li><a href="/deals/promo_codes">Coupon Codes</a></li>
+        <!-- <li><a href="/deals/promo_codes">Coupon Codes</a></li> -->
         <li class="todays_deal"><a target="_blank" href="https://amzn.to/2Q8uWyX">Deal of the Day</a></li>
         <li class="todays_deal"><a target="_blank" href="https://amzn.to/2IsIyRw">Lightning Deals</a></li>
         <!-- <li class="more"><a href="/promocodes">[ More Codes ]</a></li> -->
