--- a/app/assets/stylesheets/store.css
+++ b/app/assets/stylesheets/store.css
@@ -290,9 +290,10 @@
 .store_wrap .store_mid .mid_com .card{margin:15px 0;}
 .store_wrap .store_mid .mid_com .card p.none{color:#fff;}
 .store_wrap .store_mid .mid_com .card em{font-weight:600;}
-.store_wrap .store_mid .mid_com .card em.ls{font-size:30px;}
-.store_wrap .store_mid .mid_com .card a{float:right;color:#000;font-size:20px;border-top:3px solid;border-bottom:3px solid;padding:10px 5px;}
-.store_wrap .store_mid .mid_com .card a:hover{background:#000;color:#fff;}
+.store_wrap .store_mid .mid_com .card em.ls{}
+.store_wrap .store_mid .mid_com .card em.ls a{color:#000;font-size:30px;}
+.store_wrap .store_mid .mid_com .card em.rs a{float:right;color:#000;font-size:20px;border-top:3px solid;border-bottom:3px solid;padding:10px 5px;}
+.store_wrap .store_mid .mid_com .card em.rs a:hover{background:#000;color:#fff;}
 
 
 @media screen and (max-width:640px){
@@ -302,9 +303,9 @@
   .store_wrap .store_mid .mid_com span{font-size:30px;}
   .store_wrap .store_mid .mid_com .card{margin:30px 0;}
   .store_wrap .store_mid .mid_com .card br{display:none;}
-  .store_wrap .store_mid .mid_com .card p{width:70%;font-size:12px;}
-  .store_wrap .store_mid .mid_com .card em.ls{font-size:20px;}
-  .store_wrap .store_mid .mid_com .card a{font-size:15px;border:2px solid;}
+  .store_wrap .store_mid .mid_com .card p{font-size:13px;}
+  .store_wrap .store_mid .mid_com .card em.ls a{font-size:20px;display:block;}
+  .store_wrap .store_mid .mid_com .card em.rs a{display:none;}
   .store_wrap .store_mid .mid_com .card strong{display:none;}
 }
 
@@ -312,7 +313,8 @@
   .store_wrap .store_top h2{float:none;width:100%;margin:0;}
   .store_wrap .store_mid .mid_left{float:none;width:100%;margin:0 0 20px 0;}
   .store_wrap .store_mid .mid_right{float:none;width:100%;margin:0 0 20px 0;}
-  .store_wrap .store_mid .mid_com .card a{border:2px solid;}
+  .store_wrap .store_mid .mid_com .card em.rs a{border:2px solid;}
+
 }
 
 
