--- a/app/views/deals/_header_index.html.erb
+++ b/app/views/deals/_header_index.html.erb
@@ -18,8 +18,6 @@
         
       </ul>
     </div>
-
-
     
     <div class="gnb_m">
 
@@ -39,7 +37,8 @@
         <!--<li><a href="deals-v2-onsale.html">On Sale</a></li>-->
         <!-- <li><a href="/deals/promotions">SALES OFFER & PROMOTIONS,</a></li> -->
         <li class="top_menu"><a href="/storepromotions">FEATURED DISCOUNTS</a></li>
-        <li><a href="/storepromotions">DEALS & PROMOTIONS</a></li>
+        <li><a href="/storepromotions">TODAY'S DISCOVERY</a></li>
+        <li><a href="/deals/store_sales">SALE & CLEARANCE</a></li>
         <!-- <li><a href="/storedeals">THE BEST DEALS</a></li> -->
       </ul>
       <button class="gnb_close"><img src="<%=asset_path 'close_white.png' %>" alt="close menu" /></button>
