--- a/app/views/deals/_header_index.html.erb
+++ b/app/views/deals/_header_index.html.erb
@@ -7,7 +7,7 @@
         <!-- <li><a href="/hotdeals">More Deals & Coupons</a></li> -->
         <li><a href="/deals/bestdeals">Today's Discovery</a></li>
         <!-- <li class="more"><a href="/hotdeals">[ More Deals ]</a></li> -->
-        <li><a href="/deals/promo_codes">Coupon Codes</a></li>
+        <!-- <li><a href="/deals/promo_codes">Coupon Codes</a></li> -->
         <li class="todays_deal"><a target="_blank" href="https://amzn.to/2Q8uWyX">Deal of the Day</a></li>
         <li class="todays_deal"><a target="_blank" href="https://amzn.to/2IsIyRw">Lightning Deals</a></li>
         <!-- <li class="more"><a href="/promocodes">[ More Codes ]</a></li> -->
