--- a/app/views/deals/most_reviewed.html.erb
+++ b/app/views/deals/most_reviewed.html.erb
@@ -2,7 +2,7 @@
  <div class="wrap">   
   <%= render 'shared/header_short' %>
   <%= render 'shared/header_amazon' %>
-  <%= render 'deals/header' %>
+  <%= render 'deals/header_index' %>
   
   <div class="promotions editors_pick common_layout most_wrapper clearfix">
     <%= render 'deals/navbar_most_index' %>
