--- a/app/views/hotdeals/_usa_kor.html.erb
+++ b/app/views/hotdeals/_usa_kor.html.erb
@@ -198,7 +198,7 @@
             <li>Check coupon on the detail page to receive your extra savings.</li>
           <% end %>
           <% if @hotdeal.h_spare_45.present? %>
-            <li>Price dropped compare to last posted.</li>
+            <li>Price dropped compared to the last post.</li>
           <% end %>
         </ul>
       </span>
