--- a/app/views/deals/_header_store.html.erb
+++ b/app/views/deals/_header_store.html.erb
@@ -6,8 +6,9 @@
         <!-- <li><a href="/deals/stores">Home</a></li> -->
         <li class="coumos1"><a href="/storepromotions">Today's Discovery</a></li>
         <li><a href="/deals/store_sales">Sale & Clearance</a></li>
-        <!-- <li><a href="/deals/store_coupons">Coupons & Promotions</a></li>
-        <li><a href="/deals/store_deal_of_the_day">Deal Of The Day</a></li> -->
+        <li><a href="/deals/store_coupons">Coupons & Promotions</a></li>
+        <li><a href="/deals/store_dealoftheday">Deal Of The Day</a></li>
+        <li><a href="/deals/store_weeklyad">Weekly Ad</a></li>
         <!-- <li><a href="/storedeals">Bargains By Store</a></li> -->
         <!-- <li><a href="/deals/most_reviewed">Most-Reviewed</a></li>
         <li class="coumos" ><a href="/deals/promotions">Sales Offer & Promotions</a></li>
@@ -34,6 +35,9 @@
         <li class="top_menu"><a href="/deals/stores">FEATURED DISCOUNTS</a></li>
         <li><a href="/storepromotions">TODAY'S DISCOVERY</a></li>
         <li><a href="/deals/store_sales">SALE & CLEARANCE</a></li>
+        <li><a href="/deals/store_coupons">COUPONS & PROMOTIONS</a></li>
+        <li><a href="/deals/store_dealoftheday">DEAL OF THE DAY</a></li>
+        <li><a href="/deals/store_weeklyad">WEEKLY AD</a></li>
         <!-- <li><a href="/storedeals">THE BEST DEALS</a></li> -->
       </ul>
       <button class="gnb_close"><img src="<%=asset_path 'close_white.png' %>" alt="close menu" /></button>
