--- a/app/views/promocodes/_form.html.erb
+++ b/app/views/promocodes/_form.html.erb
@@ -12,14 +12,14 @@
     <div class="pricing clearfix">
       <%= f.input :p_spare_26, label: 'List Price' %>
       <%= f.input :p_spare_27, label: 'Discount Percentage' %>
-      <%= f.input :p_spare_54, label: 'Shipping Fee' %>
+      <%= f.input :p_spare_54, label: 'Shipping( 5.99 )' %>
     </div>
     <div class="basic_info">
       <%= f.input :p_image, label: 'Image URL' %>
       <%= f.input :p_link, label: 'Product URL' %>
       <%= f.input :p_title , label: 'Title Of Product' %>
       <%= f.input :p_image_title, label: 'Image_Title' %>
-      <%= f.input :p_keyword, label: ' gadgets, amazon, recommended, promo code, coupon, under $ ' %>
+      <%= f.input :p_keyword, label: ', gadgets, amazon, recommended, promo code, coupon, under' %>
       <%= f.input :p_hashtag, label: 'Hashtags' %>
       <!-- <%= f.input :p_spare_06, label: 'Korean Title' %>   -->
     </div>
