--- a/app/views/promocodes/edit.html.erb
+++ b/app/views/promocodes/edit.html.erb
@@ -16,7 +16,7 @@
         <div class="pricing clearfix">
           <%= f.input :p_spare_26, label: 'List Price' %>
           <%= f.input :p_spare_27, label: 'Discount Percentage' %>
-          <%= f.input :p_spare_54, label: 'Shipping Fee' %>
+          <%= f.input :p_spare_54, label: 'Shipping( 5.99 )' %>
         </div>
         <div class="basic_info">
           <%= f.input :p_image, label: 'Image URL' %>
