--- a/app/assets/stylesheets/store.css
+++ b/app/assets/stylesheets/store.css
@@ -295,6 +295,7 @@
 .store_wrap .store_mid .mid_com .card em.rs a{float:right;color:#000;font-size:20px;border-top:3px solid;border-bottom:3px solid;padding:10px 5px;}
 .store_wrap .store_mid .mid_com .card em.rs a:hover{background:#000;color:#fff;}
 .store_wrap .store_mid .mid_com .card a.shop_m{display:none;color:#616161;border-bottom:1px solid #ccc;}
+.store_wrap .store_mid .mid_com .card a.address{display:block;color:#616161;}
 
 
 
