--- a/app/views/storepromotions/show.html.erb
+++ b/app/views/storepromotions/show.html.erb
@@ -104,9 +104,9 @@
                       <% end %>
                     </em>
                   </div> 
-                  <div class="text_copied intheshow_store">
+                  <!-- <div class="text_copied intheshow_store">
                     <div class="container"><div class="wrap"><div class="box"><p data-copy-text=""><%= @storepromotion.sp_promocode %></p></div></div></div>
-                  </div>
+                  </div> -->
                 <% else %>
                   <div class="extra_info">  
                    <!-- <em>* Pricing may change and deals can expire fast.</em> -->
@@ -126,10 +126,10 @@
               <% else %>
                 <% if @storepromotion.sp_promocode.present? %>
                   <em>* End Date: End Soon</em>
-                  <div class="text_copied intheshow_store">
+                  <!-- <div class="text_copied intheshow_store">
                     <div class="container"><div class="wrap"><div class="box"><p data-copy-text=""><%= @storepromotion.sp_promocode %></p></div></div></div>
                   </div>
-                <% end %>
+                <% end %> -->
               <% end %>
 
             </div><!--./store_info-->
