--- a/app/views/storepromotions/show.html.erb
+++ b/app/views/storepromotions/show.html.erb
@@ -128,8 +128,8 @@
                   <em>* End Date: End Soon</em>
                   <!-- <div class="text_copied intheshow_store">
                     <div class="container"><div class="wrap"><div class="box"><p data-copy-text=""><%= @storepromotion.sp_promocode %></p></div></div></div>
-                  </div>
-                <% end %> -->
+                  </div> -->
+                <% end %>
               <% end %>
 
             </div><!--./store_info-->
