--- a/app/assets/stylesheets/deals.css.erb
+++ b/app/assets/stylesheets/deals.css.erb
@@ -93,7 +93,7 @@
   .codes .card_wrap .card .image_box .dealtube button.text{color:#fff;margin-top:-3.5px;font-weight:bold;}
   .codes .card_wrap .card .image_box .dealtube img{width:25px;height:25px;margin-left:-3px;}
   .codes .card_wrap .card .inner{font-weight:400;border-right:1px solid #ccc;border-left:1px solid #ccc;float:left;width:57%;padding:1.5%;}
-  .codes .card_wrap .card .inner .new_mark{color:#fff;background:#ff0000;font-size:14px;padding:2px 5px;margin-right:7px;border-radius:7px;font-weight:bold;display:inline-block;}
+  .codes .card_wrap .card .inner .new_mark{color:#fff;background:#87c442;font-size:14px;padding:2px 5px;margin-right:7px;border-radius:7px;font-weight:bold;display:inline-block;}
   .codes .card_wrap .card .inner>.regular{color:#000;font-size:17px;border-bottom:2px solid #000;}
   .codes .card_wrap .card .inner>.regular>em{background:#000;padding:0 5px;color:#fff;}
   .codes .card_wrap .card .inner>.shipping_condition{display:block;font-size:12px;}
@@ -122,7 +122,7 @@
   .codes .card_wrap .card .inner>.code_high>address>.bestdeals{color:#000;}
   .codes .card_wrap .card .inner>.code_high>address>.amz_prime{color:#e47911;}
   .codes .card_wrap .card .inner>.code_high>address>.ori_price{color:#616161;font-size:15px;text-decoration:line-through;}
-  em.pcou{color:#87c442;font-weight:700;}
+  em.pcou{color:#08f;font-weight:700;}
 
   .codes .card_wrap .card .inner>.code_high>.admin{}
   .codes .card_wrap .card .inner>.code_high>.admin>ul{}
@@ -237,9 +237,9 @@
   .codes .card_wrap .card .image_box .dealtube button.text{display:none;}
 
   .codes .card_wrap .card .inner{padding:0 0 10px 0;font-weight:400}
-  .codes .card_wrap .card .inner_top{margin-top:50px;}
-  .codes .card_wrap .card .inner .new_mark{color:#fff;background:#ff0000;font-size:14px;padding:4px 5px;margin-right:7px;border-radius:7px;font-weight:bold;display:inline-block;}
-  .codes .card_wrap .card .inner>.regular{font-size:13px;border-bottom:2px solid #000;}
+  .codes .card_wrap .card .inner_top{margin-top:50px;position:relative;}
+  .codes .card_wrap .card .inner .new_mark{color:#fff;background:#87c442;font-size:14px;padding:4px 5px;margin-right:7px;border-radius:7px;font-weight:bold;display:inline-block;position:absolute;right:0;}
+  .codes .card_wrap .card .inner>.regular{font-size:13px;border-bottom:2px solid #000;display:block;}
   .codes .card_wrap .card .inner>.regular>em{background:#000;padding:0 5px;color:#fff;font-size:20px;}
   .codes .card_wrap .card .inner>.shipping_condition{display:block;font-size:12px;}
   .codes .card_wrap .card .inner>.shipping_condition>a{color:#08f;text-decoration:none;font-weight:500;}
@@ -258,7 +258,7 @@
   .codes .card_wrap .card .inner>.code_high>address>.dis_price{color:#08f;font-size:25px;margin-right:5px;font-weight:500;}
   .codes .card_wrap .card .inner>.code_high>address>.bestdeals{color:#000;}
   .codes .card_wrap .card .inner>.code_high>address>.ori_price{color:#616161;font-size:15px;text-decoration:line-through;}
-  em.pcou{color:#87c442;font-weight:700;}
+  em.pcou{color:#08f;font-weight:700;}
   .codes .card_wrap .card .inner>.code_high>.admin{}
   .codes .card_wrap .card .inner>.code_high>.admin>ul{}
   .codes .card_wrap .card .inner>.code_high>.admin>ul>li{float:left;margin-right:15px;}
