--- a/app/views/deals/_header_index.html.erb
+++ b/app/views/deals/_header_index.html.erb
@@ -26,7 +26,7 @@
         <li class="top_menu"><a href="/deals/quick_search">ALL ABOUT AMAZON</a></li>
         <li><a href="/deals/quick_search">AMAZON DEAL FINDER,</a></li>
         <!-- <li><a href="/hotdeals">MORE DEALS & COUPONS</a></li> -->
-        <li><a href="/deals/quick_search">AMAZON DEAL FINDER,</a></li>
+        <li><a href="/deals/bestdeals">TODAY'S DISCOVERY,</a></li>
         <!-- <li><a href="/hotdeals"> - MORE DEALS,</a></li> -->
         <li><a href="/deals/promo_codes">COUPON CODES,</a></li>
         <li><a target="_blank" href="https://amzn.to/2Q8uWyX">DEAL OF THE DAY,</a></li>
