--- a/app/views/hotdeals/_form.html.erb
+++ b/app/views/hotdeals/_form.html.erb
@@ -55,8 +55,8 @@
     </div> -->
 
     <div class="find_more">
-      <%= f.input :h_spare_14, label: 'Amazon Choice' %>
-      <%= f.input :h_spare_15, label: 'Amazon Choice Link' %>
+      <!-- <%= f.input :h_spare_14, label: 'Amazon Choice' %> -->
+      <!-- <%= f.input :h_spare_15, label: 'Amazon Choice Link' %> -->
     </div>
     <%= f.input :h_spare_92, label: '( US Time Zone )' %><br />
     <!-- <%= f.input :h_description, label: 'Description Of Product' %> -->
