--- a/app/views/promocodes/_form.html.erb
+++ b/app/views/promocodes/_form.html.erb
@@ -46,8 +46,8 @@
     </div> -->
 
     <div class="find_more basic_info">
-      <%= f.input :p_spare_07, label: 'Amazon Choice' %>
-      <%= f.input :p_spare_08, label: 'Amazon Choice Link' %>
+      <!-- <%= f.input :p_spare_07, label: 'Amazon Choice' %> -->
+      <!-- <%= f.input :p_spare_08, label: 'Amazon Choice Link' %> -->
     </div>
     <div class="pricing clearfix">
       <%= f.input :p_promocode, input_html: { class: "promo_code" }, label: 'Promo Code' %>
