--- a/app/assets/stylesheets/deals.css.erb
+++ b/app/assets/stylesheets/deals.css.erb
@@ -236,9 +236,9 @@
   .codes .card_wrap .card .image_box .dealtube img{width:45px;height:45px;position:absolute;bottom:0;left:0;}
   .codes .card_wrap .card .image_box .dealtube button.text{display:none;}
 
-  .codes .card_wrap .card .inner{padding:0 0 10px 0;font-weight:400}
+  .codes .card_wrap .card .inner{padding:0 0 10px 0;font-weight:400;position:relative;;}
   .codes .card_wrap .card .inner_top{margin-top:50px;position:relative;}
-  .codes .card_wrap .card .inner .new_mark{color:#fff;background:#87c442;font-size:14px;padding:4px 5px;margin-right:7px;border-radius:7px;font-weight:bold;display:inline-block;position:absolute;right:0;}
+  .codes .card_wrap .card .inner .new_mark{color:#fff;background:#87c442;font-size:14px;padding:4px 5px;border-radius:7px;font-weight:bold;position:absolute;right:0;}
   .codes .card_wrap .card .inner>.regular{font-size:13px;border-bottom:2px solid #000;display:block;}
   .codes .card_wrap .card .inner>.regular>em{background:#000;padding:0 5px;color:#fff;font-size:20px;}
   .codes .card_wrap .card .inner>.shipping_condition{display:block;font-size:12px;}
