before adding feautred deals on amazon

--- a/app/assets/stylesheets/deals.css.erb
+++ b/app/assets/stylesheets/deals.css.erb
@@ -227,8 +227,8 @@
  
   .codes .card_wrap{/*column-width:170px;*/column-gap:5px;column-count:1;font-family: 'Montserrat', sans-serif;}
   .codes .card_wrap .deals_description{margin-bottom:20px;padding:0 5px;color:#616161;}
-  .codes .card_wrap .card{display:inline-block;margin:0;margin-bottom:30px;padding:5px;border-bottom:1px solid #ddd;}
-  .codes .card_wrap .card .image_box{text-align:center;position:relative;}
+  .codes .card_wrap .card{display:inline-block;margin:30px 0;padding:5px;border-bottom:1px solid #ddd;}
+  .codes .card_wrap .card .image_box{text-align:center;position:relative;margin-bottom:30px;}
   .codes .card_wrap .card .image_box img{width:70%;height:200px;object-fit:contain;}
   .codes .card_wrap .card .image_box .rating{}
   .codes .card_wrap .card .image_box .rating img{width:100px;height:22px;margin-bottom:0;}
