--- a/app/views/shared/_footer2.html.erb
+++ b/app/views/shared/_footer2.html.erb
@@ -20,7 +20,7 @@
           <li><a href="/recommends">#Featured</a></li>
           <li><a href="/deals/quick_search">#Amazon Deals Finder</a></li>
           <li><a href="/deals/bestdeals">#Amazon Deals</a></li>
-          <li><a href="/deals/promocodes">#Amazon Coupon Codes</a></li>
+          <li><a href="/deals/promo_codes">#Amazon Coupon Codes</a></li>
           <li><a href="/deals/storepromotions">#Featured Discounts</a></li>
           <!-- <li><a href="/deals/most_reviewed">#Most-Reviewed</a></li> -->
           
