--- a/app/views/deals/quick_search.html.erb
+++ b/app/views/deals/quick_search.html.erb
@@ -5,6 +5,8 @@
   <%= render 'shared/header_amazon' %>
   <%= render 'deals/header_index' %> 
 
+  <%= render 'shared/botton_amz' %>
+
     <div class="quicksearch common_layout codes">
 
         <div class="set_search clearfix">
