--- a/app/views/deals/store_weeklyad.html.erb
+++ b/app/views/deals/store_weeklyad.html.erb
@@ -3,7 +3,9 @@
     <%= render 'shared/header_short' %>
     <%= render 'shared/header_bystore' %>
     <%= render 'deals/header_store' %>
+    <%= render 'shared/botton_store' %>
 
+    <div class="store_pin clearfix"><p>Weekly AD</p></div>
     <div class="store_wrap">
       
       <!-- <div class="store_top clearfix">
