--- a/app/views/storepromotions/index.html.erb
+++ b/app/views/storepromotions/index.html.erb
@@ -4,6 +4,8 @@
     <%= render 'shared/header_short' %>
     <%= render 'shared/header_bystore' %>
     <%= render 'deals/header_store' %>
+
+    <%= render 'shared/botton_store' %>
     <div class="sd_category">
       <% if params[:spcategory].present? %>
         <div class="dealpage_title sd_com"><p>Deals Of <span><%= params[:spcategory] %></span></p></div>
