--- a/app/views/shared/_header_amazon.html.erb
+++ b/app/views/shared/_header_amazon.html.erb
@@ -1,5 +1,6 @@
 <div class="deals_main_menu clearfix">
   <ul>
-    <li class="nth_1"><a class="active" href="/deals/quick_search">All About Amazon</a><em>,</em> <a href="/storepromotions"><span> Featured Discounts</span></a></li>
+    <li class="nth_1"><a class="active" href="/deals/quick_search">All About Amazon</a></li>
+    <li><a href="/storepromotions"><span> Featured Discounts</span></a></li>
   </ul>    
 </div>
