--- a/app/views/shared/_botton_store.html.erb
+++ b/app/views/shared/_botton_store.html.erb
@@ -1,7 +1,7 @@
 <div class="botton_m clearfix">
   <a href="/storepromotions"><img src="<%=asset_path 'ui_discovery.png' %>" alt="Today's Discovery" /></a>
-  <a href="/deals/store_sales"><img src="<%=asset_path 'ui_sale' %>" alt="Amazon Sale" /></a>
-  <a href="/deals/store_coupons"><img src="<%=asset_path 'ui_coupon' %>" alt="Amazon Coupon" /></a>
-  <a href="/deals/store_dealoftheday"><img src="<%=asset_path 'ui_dotd' %>" alt="Deal Of The Day" /></a>
-  <a href="/deals/store_weeklyad"><img src="<%=asset_path 'ui_weekly' %>" alt="Weekly Ad" /></a>
+  <a href="/deals/store_sales"><img src="<%=asset_path 'ui_sale.png' %>" alt="Amazon Sale" /></a>
+  <a href="/deals/store_coupons"><img src="<%=asset_path 'ui_coupon.png' %>" alt="Amazon Coupon" /></a>
+  <a href="/deals/store_dealoftheday"><img src="<%=asset_path 'ui_dotd.png' %>" alt="Deal Of The Day" /></a>
+  <a href="/deals/store_weeklyad"><img src="<%=asset_path 'ui_weekly.png' %>" alt="Weekly Ad" /></a>
 </div>
